--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <a href="https://www.instagram.com/_devdatt_27/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
   <a href="https://www.linkedin.com/in/devdatt-kumar-52bb39222/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
           </div>
-    <p>&copy; 2025 ChatGPT. All rights reserved.</p>
+    <p>&copy;  All rights reserved.@ DEVDATT</p>
   </footer>
 </body>
 </html>
