--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#">HOME</a></li>
         <li><a href="#">TASKS</a></li>
         <li><a href="#">REQUIREMENT</a></li>
-        <li><a href="#">Login/Signup</a></li>
+        <li><a href="#">Login</a></li>
       </ul>
     </nav>
   </header>
