--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
       <div class="logo">JSP</div>
       <ul class="nav-links">
-        <li><a href="#"></a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="#">TASKS</a></li>
         <li><a href="#">REQUIREMENT</a></li>
         <li><a href="#">Login</a></li>
