--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <div class="logo">JSP</div>
       <ul class="nav-links">
         <li><a href="#"></a></li>
-        <li><a href="#">TASKS</a></li>
-        <li><a href="#">REQUIREMENT</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="requirement.html">TASKS</a></li>
+        <li><a href="#">PRODUCT</a></li>
+        <li><a href="login and signup page.html">Login</a></li>
       </ul>
     </nav>
   </header>
