--- a/index.html
+++ b/index.html
@@ -15,22 +15,13 @@
       <div class="logo">JSP</div>
       <ul class="nav-links">
         <li><a href="#"></a></li>
-        <li><a href="requirement .html">TASKS</a></li>
+        <li><a href="TASKS.html">TASKS</a></li>
         <li><a href="#">PRODUCT</a></li>
         <li><a href="login and signup page.html">Login</a></li>
       </ul>
     </nav>
   </header>
-   <div class="ticker-wrap">
-    <div class="ticker">
-      <span>🔴 Breaking: Slowly slowly we updated the site for easy to use </span>
-      <span>⏳ Estimated response time: within 2-4 hours.</span>
-      <span>🔴 Breaking: JSP is a platform for those who want to complete their tasks with the help of others.</span>
-      <span>📌 Our team section are shown in below which updated soon.</span>
-            <span>📌 Please fill all required fields to proceed.</span>
-  
-    </div>
-  </div>
+   
 
   <section class="hero">
     <div class="hero-content">
@@ -42,10 +33,19 @@
         with perfection.</p>
       <a href="#" class="cta-button">Get Started</a>
     </div>
-  </section>
+  </section><br>
 
 
-
+<div class="ticker-wrap">
+    <div class="ticker">
+      <span>🔴 Breaking: Slowly slowly we updated the site for easy to use </span>
+      <span>⏳ Estimated response time: within 2-4 hours.</span>
+      <span>🔴 Breaking: JSP is a platform for those who want to complete their tasks with the help of others.</span>
+      <span>📌 Our team section are shown in below which updated soon.</span>
+            <span>📌 Please fill all required fields to proceed.</span>
+  
+    </div>
+  </div>
   
 
 
